# stio

./: .gitignore  LICENSE  Notes.md  README.md  dependencies.yaml
rpg_common/src/: fs.cpp
svo/: package.xml
svo/src/: frame_handler_array.cpp  frame_handler_base.cpp  frame_handler_mono.cpp  frame_handler_stereo.cpp  imu_handler.cpp  initialization.cpp  io.cpp  map.cpp  pose_optimizer.cpp  reprojector.cpp  stereo_triangulation.cpp
svo/test/: test_frame.cpp
svo_backend_common/: CMakeLists.txt  package.xml
svo_backend_common/include/svo/: outlier_rejection.hpp
svo_backend_common/src/: outlier_rejection.cpp
svo_ceres_backend/: CMakeLists.txt
svo_ceres_backend/src/: ceres_backend_interface.cpp  ceres_backend_publisher.cpp  error_interface.cpp  estimator.cpp  homogeneous_point_error.cpp  homogeneous_point_local_parameterization.cpp  homogeneous_point_parameter_block.cpp  imu_error.cpp  local_parameterization_additional_interfaces.cpp  map.cpp  map_alignment.cpp  marginalization_error.cpp  motion_detector.cpp  outlier_rejection.cpp  pose_error.cpp  pose_local_parameterization.cpp  pose_parameter_block.cpp  relative_pose_error.cpp  speed_and_bias_error.cpp  speed_and_bias_parameter_block.cpp
svo_ceres_backend/test/: test_estimator.cpp  test_homogeneous_point_error.cpp  test_imu_error.cpp  test_map.cpp  test_marginalization.cpp  test_pose_error.cpp  test_pose_local_parameterization.cpp  test_relative_pose_error.cpp  test_reprojection_error.cpp  test_speed_and_bias_error.cpp
svo_common/: package.xml
svo_common/src/: frame.cpp  point.cpp
svo_common/test/: test_container_helpers.cpp  test_feature_wrapper.cpp
svo_direct/src/: depth_estimation.cpp  depth_filter.cpp  elder_zucker.cpp  feature_alignment.cpp  feature_detection.cpp  feature_detection_utils.cpp  matcher.cpp  patch_warp.cpp
svo_direct/test/: test_depth_estimation.cpp  test_edgelet_direction.cpp  test_edgelet_extraction.cpp  test_feature_alignment.cpp  test_feature_detection.cpp  test_patch_score.cpp  test_utils.h
svo_global_map/src/: global_map.cpp  null_stream.cpp
svo_gtsam_backend/: CMakeLists.txt  package.xml
svo_gtsam_backend/include/svo/: external_pos_handler.hpp  external_pose_handler.hpp  gtsam_backend_interface.hpp  gtsam_backend_publisher.hpp
svo_gtsam_backend/include/svo/gtsam_backend/: estimator.hpp
svo_gtsam_backend/src/: estimator.cpp  gtsam_backend_interface.cpp  gtsam_backend_publisher.cpp
svo_img_align/src/: frame_gpu.cpp  sparse_img_align.cpp  sparse_img_align_base.cpp  sparse_img_align_device_utils.cu  sparse_img_align_gpu.cpp
svo_pgo/src/: pgo.cpp
svo_pgo/test/: test.cpp
svo_ros/: CMakeLists.txt  package.xml  rviz_config.rviz  rviz_config_vio.rviz  rviz_config_vio_gtsam.rviz
svo_ros/launch/: active_gold_mine_vio.launch  active_gold_mine_vio_8bit_histeq.launch  (+8 more)
(+255 files in other folders)
