<?xml version="1.0"?>
<package format="2">
  <name>svo_backend_common</name>
  <version>1.0.0</version>
  <description>
    svo_backend_common
  </description>
  <maintainer email="jhuber91@gmail.com">Jonathan Huber</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>glog_catkin</depend>
  <depend>svo_common</depend>
</package>
